move CacheHint/CacheScope back into apollo-cache-control

--- a/packages/apollo-server-plugin-response-cache/package.json
+++ b/packages/apollo-server-plugin-response-cache/package.json
@@ -19,6 +19,7 @@
     "node": ">=6"
   },
   "dependencies": {
+    "apollo-cache-control": "file:../apollo-cache-control",
     "apollo-server-caching": "file:../apollo-server-caching",
     "apollo-server-plugin-base": "file:../apollo-server-plugin-base",
     "apollo-server-env": "file:../apollo-server-env"
