--- a/packages/apollo-server-plugin-response-cache/tsconfig.json
+++ b/packages/apollo-server-plugin-response-cache/tsconfig.json
@@ -7,6 +7,7 @@
   "include": ["src/**/*"],
   "exclude": ["**/__tests__", "**/__mocks__"],
   "references": [
+    { "path": "../apollo-cache-control" },
     { "path": "../apollo-server-plugin-base" },
     { "path": "../apollo-server-caching" }
   ]
